gccida/g1/schedule_block
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2121:4: error: expected ';' after expression
rtx v11; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2121:5: error: use of undeclared identifier 'v11'; did you mean 'v10'?
rtx v11; // rbx 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2120:13: note: 'v10' declared here
const char *v10; // rax 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2126:6: error: use of undeclared identifier 'v16'
rtx *v16; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2127:31: error: unknown type name 'rtx'
int ( *reorder)( FILE *, int, rtx *, int *, int); // rax 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2143:24: error: redefinition of parameter 'rtx'
__int64 (  *v33)( rtx, rtx); // rax 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2143:19: error: a parameter list without types is only allowed in a function definition
__int64 (  *v33)( rtx, rtx); // rax 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2147:24: error: unexpected type name 'uint64': expected identifier
__int64 (  *v37)( rtx, _QWORD); // rax 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:1753:16: note: expanded from macro '_QWORD'
#define _QWORD uint64
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2147:19: error: a parameter list without types is only allowed in a function definition
__int64 (  *v37)( rtx, _QWORD); // rax 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2160:19: error: a parameter list without types is only allowed in a function definition
__int64 (  *v50)( rtx); // rax 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2161:24: error: redefinition of parameter 'rtx'
__int64 (  *v51)( rtx, rtx); // rdx 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2161:19: error: a parameter list without types is only allowed in a function definition
__int64 (  *v51)( rtx, rtx); // rdx 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2163:24: error: unexpected type name 'uint64': expected identifier
__int64 (  *v53)( rtx, _QWORD); // rax 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:1753:16: note: expanded from macro '_QWORD'
#define _QWORD uint64
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2163:19: error: a parameter list without types is only allowed in a function definition
__int64 (  *v53)( rtx, _QWORD); // rax 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2179:19: error: a parameter list without types is only allowed in a function definition
__int64 (  *v69)( rtx); // rax 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2194:19: error: a parameter list without types is only allowed in a function definition
__int64 (  *v84)( rtx); // rax 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2207:19: error: a parameter list without types is only allowed in a function definition
__int64 (  *v97)( rtx); // rax 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2208:24: error: redefinition of parameter 'rtx'
__int64 (  *v98)( rtx, rtx); // rdx 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2208:19: error: a parameter list without types is only allowed in a function definition
__int64 (  *v98)( rtx, rtx); // rdx 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/haifa-sched.c:2216:4: error: expected ';' after expression
rtx v106; // r15 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_block/src/obj/haifa-sched.o] Error 1
